feat: show favorite flag in recipe response
