# api/docs/swagger.json
@@ -203,6 +203,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "boolean",
+                        "description": "กรองเฉพาะสูตรอาหารที่ผู้ใช้ปัจจุบันถูกใจไว้",
+                        "name": "favorite",
+                        "in": "query"
+                    },
+                    {
                         "enum": [
                             "ASC",
                             "DESC"
@@ -935,6 +941,9 @@
                     "items": {
                         "$ref": "#/definitions/internal_recipe.InstructionResponse"
                     }
+                },
+                "isFavorite": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
